--- a/public/auth-integration.html
+++ b/public/auth-integration.html
@@ -131,7 +131,7 @@
 <body>
     <div class="container">
         <div class="logo">📸</div>
-        <h1>Fotografo.site</h1>
+        <h1>Sistema Principal</h1>
         <p class="subtitle">Exemplo de integração com PhotoShare Pro</p>
         
         <div class="user-info">
